# flaneur

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
docs/: ci-workflow.yml
examples/: demo.py
skills/itinerary/: SKILL.MD
src/flaneur/: __init__.py  advice.py  bike.py  config.py  departures.py  disruptions.py  geocoding.py  journeys.py  models.py  prim_client.py  server.py  velib.py  weather.py
src/idfm_mcp/: __init__.py  bike.py  config.py  departures.py  disruptions.py  geocoding.py  journeys.py  models.py  prim_client.py  server.py  weather.py
tests/: test_advice.py  test_auth.py  test_bike.py  test_client.py  test_departures_http.py  test_disruptions.py  test_geocoding.py  test_journeys.py  test_journeys_http.py  test_line_traffic_http.py  test_velib.py  test_weather.py
