[project]
name = "flaneur"
version = "0.1.0"
description = "MCP server for Île-de-France mobility: transit journeys, real-time disruptions, cycling routes and weather."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alphonse Terrier" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.scripts]
flaneur = "flaneur.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flaneur"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
